// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Summation Estimation tag component Function updateState snapshot test should execute and render correctly 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E7ECEF",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 24,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "marginHorizontal": 4,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#8A94A6",
            "fontFamily": "alldone",
            "fontSize": 16,
            "opacity": 1,
          }
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#04142F",
            "fontFamily": "Roboto-Medium",
            "fontSize": 14,
            "letterSpacing": 0.16,
            "lineHeight": 22,
          },
          Object {
            "color": "#8A94A6",
            "marginLeft": 2,
            "marginRight": 10,
            "marginVertical": 1,
          },
        ]
      }
    >
      1 Point
    </Text>
  </View>
</View>
`;

exports[`Task Summation Estimation tag component Function updateState snapshot test should execute and render correctly 2`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E7ECEF",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 24,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "marginHorizontal": 4,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#8A94A6",
            "fontFamily": "alldone",
            "fontSize": 16,
            "opacity": 1,
          }
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#04142F",
            "fontFamily": "Roboto-Medium",
            "fontSize": 14,
            "letterSpacing": 0.16,
            "lineHeight": 22,
          },
          Object {
            "color": "#8A94A6",
            "marginLeft": 2,
            "marginRight": 10,
            "marginVertical": 1,
          },
        ]
      }
    >
      1 Point
    </Text>
  </View>
</View>
`;

exports[`Task Summation Estimation tag component Task Summation snapshot test should render correctly 1`] = `null`;

exports[`Task Summation Estimation tag component Task Summation snapshot test should render correctly for amount 1 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E7ECEF",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 24,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "marginHorizontal": 4,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#8A94A6",
            "fontFamily": "alldone",
            "fontSize": 16,
            "opacity": 1,
          }
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#04142F",
            "fontFamily": "Roboto-Medium",
            "fontSize": 14,
            "letterSpacing": 0.16,
            "lineHeight": 22,
          },
          Object {
            "color": "#8A94A6",
            "marginLeft": 2,
            "marginRight": 10,
            "marginVertical": 1,
          },
        ]
      }
    >
      1 Point
    </Text>
  </View>
</View>
`;

exports[`Task Summation Estimation tag component Task Summation snapshot test should render correctly for amount 2 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E7ECEF",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 24,
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "marginHorizontal": 4,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#8A94A6",
            "fontFamily": "alldone",
            "fontSize": 16,
            "opacity": 1,
          }
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#04142F",
            "fontFamily": "Roboto-Medium",
            "fontSize": 14,
            "letterSpacing": 0.16,
            "lineHeight": 22,
          },
          Object {
            "color": "#8A94A6",
            "marginLeft": 2,
            "marginRight": 10,
            "marginVertical": 1,
          },
        ]
      }
    >
      2 Points
    </Text>
  </View>
</View>
`;
